syntax = "proto3";
package cart.service;

option java_multiple_files = true;
option java_package = "au.com.nab.icommerce.cart.protobuf";
option java_outer_classname = "CartServiceDomain";

message PItem {
  int32 productId = 1;
  int32 quantity = 2;
  int64 addedTime = 3;
}

message PCart {
  string id = 1;
  int32 customerId = 2;
  string customerName = 3;
  repeated PItem items = 4;
}

message PAddItemRequest {
  int32 customerId = 1;
  optional string customerName = 2;
  repeated PItem items = 3;
}